# CantmeraOS

./: README.md  pyproject.toml
Cantmera/: button_test.py  cantmera.py  config.py  gallery.py  generate_grayscale.py  graphic.py  main.py  matplotlib_grayscale.py  menu.py  option.py  roll.py  screen.py  screen_reset.py  screen_test.py  shutter.py  twitter.py  usb.py
