[tool.poetry]
name = "cantmeraos"
version = "0.1.0"
description = ""
authors = ["Danny Ullrich <42869122+ullrichd21@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.6.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.1"

[tool.taskipy.tasks]
run = "pytest --cov-report term-missing --cov-fail-under=70  --cov-branch --cov=gatorconfig tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
